--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,10 @@
     "@mui/lab": "^5.0.0-alpha.165",
     "@mui/material": "^5.15.10",
     "@reduxjs/toolkit": "^2.2.1",
+    "axios": "^1.6.7",
+    "hookverse": "^1.3.4",
     "i18next": "^23.9.0",
+    "query-string": "^8.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^14.0.5",
